src/snapshots/mdbook_mermaid_ssr__renderer__tests__security_level_loose.snap
---
source: src/renderer.rs
expression: Oxfmt::format(svg)
---
<svg
  id="mermaid-diagram-9259545250656662834"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
  class="flowchart"
  style="max-width: 150.703125px;"
  viewBox="0 0 150.703125 198"
  role="graphics-document document"
  aria-roledescription="flowchart-v2"
>
  <style>
    #mermaid-diagram-9259545250656662834{font-family:"trebuchet ms",verdana,arial,sans-serif;font-size:16px;fill:#333;}@keyframes edge-animation-frame{from{stroke-dashoffset:0;}}@keyframes dash{to{stroke-dashoffset:0;}}#mermaid-diagram-9259545250656662834 .edge-animation-slow{stroke-dasharray:9,5!important;stroke-dashoffset:900;animation:dash 50s linear infinite;stroke-linecap:round;}#mermaid-diagram-9259545250656662834 .edge-animation-fast{stroke-dasharray:9,5!important;stroke-dashoffset:900;animation:dash 20s linear infinite;stroke-linecap:round;}#mermaid-diagram-9259545250656662834 .error-icon{fill:#552222;}#mermaid-diagram-9259545250656662834 .error-text{fill:#552222;stroke:#552222;}#mermaid-diagram-9259545250656662834 .edge-thickness-normal{stroke-width:1px;}#mermaid-diagram-9259545250656662834 .edge-thickness-thick{stroke-width:3.5px;}#mermaid-diagram-9259545250656662834 .edge-pattern-solid{stroke-dasharray:0;}#mermaid-diagram-9259545250656662834 .edge-thickness-invisible{stroke-width:0;fill:none;}#mermaid-diagram-9259545250656662834 .edge-pattern-dashed{stroke-dasharray:3;}#mermaid-diagram-9259545250656662834 .edge-pattern-dotted{stroke-dasharray:2;}#mermaid-diagram-9259545250656662834 .marker{fill:#333333;stroke:#333333;}#mermaid-diagram-9259545250656662834 .marker.cross{stroke:#333333;}#mermaid-diagram-9259545250656662834 svg{font-family:"trebuchet ms",verdana,arial,sans-serif;font-size:16px;}#mermaid-diagram-9259545250656662834 p{margin:0;}#mermaid-diagram-9259545250656662834 .label{font-family:"trebuchet ms",verdana,arial,sans-serif;color:#333;}#mermaid-diagram-9259545250656662834 .cluster-label text{fill:#333;}#mermaid-diagram-9259545250656662834 .cluster-label span{color:#333;}#mermaid-diagram-9259545250656662834 .cluster-label span p{background-color:transparent;}#mermaid-diagram-9259545250656662834 .label text,#mermaid-diagram-9259545250656662834 span{fill:#333;color:#333;}#mermaid-diagram-9259545250656662834 .node rect,#mermaid-diagram-9259545250656662834 .node circle,#mermaid-diagram-9259545250656662834 .node ellipse,#mermaid-diagram-9259545250656662834 .node polygon,#mermaid-diagram-9259545250656662834 .node path{fill:#ECECFF;stroke:#9370DB;stroke-width:1px;}#mermaid-diagram-9259545250656662834 .rough-node .label text,#mermaid-diagram-9259545250656662834 .node .label text,#mermaid-diagram-9259545250656662834 .image-shape .label,#mermaid-diagram-9259545250656662834 .icon-shape .label{text-anchor:middle;}#mermaid-diagram-9259545250656662834 .node .katex path{fill:#000;stroke:#000;stroke-width:1px;}#mermaid-diagram-9259545250656662834 .rough-node .label,#mermaid-diagram-9259545250656662834 .node .label,#mermaid-diagram-9259545250656662834 .image-shape .label,#mermaid-diagram-9259545250656662834 .icon-shape .label{text-align:center;}#mermaid-diagram-9259545250656662834 .node.clickable{cursor:pointer;}#mermaid-diagram-9259545250656662834 .root .anchor path{fill:#333333!important;stroke-width:0;stroke:#333333;}#mermaid-diagram-9259545250656662834 .arrowheadPath{fill:#333333;}#mermaid-diagram-9259545250656662834 .edgePath .path{stroke:#333333;stroke-width:2.0px;}#mermaid-diagram-9259545250656662834 .flowchart-link{stroke:#333333;fill:none;}#mermaid-diagram-9259545250656662834 .edgeLabel{background-color:rgba(232,232,232, 0.8);text-align:center;}#mermaid-diagram-9259545250656662834 .edgeLabel p{background-color:rgba(232,232,232, 0.8);}#mermaid-diagram-9259545250656662834 .edgeLabel rect{opacity:0.5;background-color:rgba(232,232,232, 0.8);fill:rgba(232,232,232, 0.8);}#mermaid-diagram-9259545250656662834 .labelBkg{background-color:rgba(232, 232, 232, 0.5);}#mermaid-diagram-9259545250656662834 .cluster rect{fill:#ffffde;stroke:#aaaa33;stroke-width:1px;}#mermaid-diagram-9259545250656662834 .cluster text{fill:#333;}#mermaid-diagram-9259545250656662834 .cluster span{color:#333;}#mermaid-diagram-9259545250656662834 div.mermaidTooltip{position:absolute;text-align:center;max-width:200px;padding:2px;font-family:"trebuchet ms",verdana,arial,sans-serif;font-size:12px;background:hsl(80, 100%, 96.2745098039%);border:1px solid #aaaa33;border-radius:2px;pointer-events:none;z-index:100;}#mermaid-diagram-9259545250656662834 .flowchartTitleText{text-anchor:middle;font-size:18px;fill:#333;}#mermaid-diagram-9259545250656662834 rect.text{fill:none;stroke-width:0;}#mermaid-diagram-9259545250656662834 .icon-shape,#mermaid-diagram-9259545250656662834 .image-shape{background-color:rgba(232,232,232, 0.8);text-align:center;}#mermaid-diagram-9259545250656662834 .icon-shape p,#mermaid-diagram-9259545250656662834 .image-shape p{background-color:rgba(232,232,232, 0.8);padding:2px;}#mermaid-diagram-9259545250656662834 .icon-shape rect,#mermaid-diagram-9259545250656662834 .image-shape rect{opacity:0.5;background-color:rgba(232,232,232, 0.8);fill:rgba(232,232,232, 0.8);}#mermaid-diagram-9259545250656662834 .label-icon{display:inline-block;height:1em;overflow:visible;vertical-align:-0.125em;}#mermaid-diagram-9259545250656662834 .node .label-icon path{fill:currentColor;stroke:revert;stroke-width:revert;}#mermaid-diagram-9259545250656662834 :root{--mermaid-font-family:"trebuchet ms",verdana,arial,sans-serif;}
  </style>
  <g>
    <marker
      id="mermaid-diagram-9259545250656662834_flowchart-v2-pointEnd"
      class="marker flowchart-v2"
      viewBox="0 0 10 10"
      refX="5"
      refY="5"
      markerUnits="userSpaceOnUse"
      markerWidth="8"
      markerHeight="8"
      orient="auto"
    >
      <path
        d="M 0 0 L 10 5 L 0 10 z"
        class="arrowMarkerPath"
        style="stroke-width: 1; stroke-dasharray: 1, 0;"
      ></path>
    </marker>
    <marker
      id="mermaid-diagram-9259545250656662834_flowchart-v2-pointStart"
      class="marker flowchart-v2"
      viewBox="0 0 10 10"
      refX="4.5"
      refY="5"
      markerUnits="userSpaceOnUse"
      markerWidth="8"
      markerHeight="8"
      orient="auto"
    >
      <path
        d="M 0 5 L 10 10 L 10 0 z"
        class="arrowMarkerPath"
        style="stroke-width: 1; stroke-dasharray: 1, 0;"
      ></path>
    </marker>
    <marker
      id="mermaid-diagram-9259545250656662834_flowchart-v2-circleEnd"
      class="marker flowchart-v2"
      viewBox="0 0 10 10"
      refX="11"
      refY="5"
      markerUnits="userSpaceOnUse"
      markerWidth="11"
      markerHeight="11"
      orient="auto"
    >
      <circle
        cx="5"
        cy="5"
        r="5"
        class="arrowMarkerPath"
        style="stroke-width: 1; stroke-dasharray: 1, 0;"
      ></circle>
    </marker>
    <marker
      id="mermaid-diagram-9259545250656662834_flowchart-v2-circleStart"
      class="marker flowchart-v2"
      viewBox="0 0 10 10"
      refX="-1"
      refY="5"
      markerUnits="userSpaceOnUse"
      markerWidth="11"
      markerHeight="11"
      orient="auto"
    >
      <circle
        cx="5"
        cy="5"
        r="5"
        class="arrowMarkerPath"
        style="stroke-width: 1; stroke-dasharray: 1, 0;"
      ></circle>
    </marker>
    <marker
      id="mermaid-diagram-9259545250656662834_flowchart-v2-crossEnd"
      class="marker cross flowchart-v2"
      viewBox="0 0 11 11"
      refX="12"
      refY="5.2"
      markerUnits="userSpaceOnUse"
      markerWidth="11"
      markerHeight="11"
      orient="auto"
    >
      <path
        d="M 1,1 l 9,9 M 10,1 l -9,9"
        class="arrowMarkerPath"
        style="stroke-width: 2; stroke-dasharray: 1, 0;"
      ></path>
    </marker>
    <marker
      id="mermaid-diagram-9259545250656662834_flowchart-v2-crossStart"
      class="marker cross flowchart-v2"
      viewBox="0 0 11 11"
      refX="-1"
      refY="5.2"
      markerUnits="userSpaceOnUse"
      markerWidth="11"
      markerHeight="11"
      orient="auto"
    >
      <path
        d="M 1,1 l 9,9 M 10,1 l -9,9"
        class="arrowMarkerPath"
        style="stroke-width: 2; stroke-dasharray: 1, 0;"
      ></path>
    </marker>
    <g class="root">
      <g class="clusters"></g>
      <g class="edgePaths">
        <path
          d="M75.352,62L75.352,68.167C75.352,74.333,75.352,86.667,75.352,98.333C75.352,110,75.352,121,75.352,126.5L75.352,132"
          id="L_A_B_0"
          class=" edge-thickness-normal edge-pattern-solid edge-thickness-normal edge-pattern-solid flowchart-link"
          style=";"
          data-edge="true"
          data-et="edge"
          data-id="L_A_B_0"
          data-points="W3sieCI6NzUuMzUxNTYyNSwieSI6NjJ9LHsieCI6NzUuMzUxNTYyNSwieSI6OTl9LHsieCI6NzUuMzUxNTYyNSwieSI6MTM2fV0="
          marker-end="url(#mermaid-diagram-9259545250656662834_flowchart-v2-pointEnd)"
        ></path>
      </g>
      <g class="edgeLabels">
        <g class="edgeLabel" transform="translate(75.3515625, 99)">
          <g class="label" data-id="L_A_B_0" transform="translate(-17.796875, -12)">
            <foreignObject width="35.59375" height="24"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                class="labelBkg"
                style="display: table-cell; white-space: nowrap; line-height: 1.5; max-width: 200px; text-align: center;"
              >
                <span class="edgeLabel "
                  ><p><em>edge</em></p></span
                >
              </div></foreignObject
            >
          </g>
        </g>
      </g>
      <g class="nodes">
        <g class="node default  " id="flowchart-A-0" transform="translate(75.3515625, 35)">
          <rect
            class="basic label-container"
            style=""
            x="-66.453125"
            y="-27"
            width="132.90625"
            height="54"
          ></rect>
          <g class="label" style="" transform="translate(-36.453125, -12)">
            <rect></rect>
            <foreignObject width="72.90625" height="24"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: table-cell; white-space: nowrap; line-height: 1.5; max-width: 200px; text-align: center;"
              >
                <span class="nodeLabel "
                  ><p><b>Bold</b> <i>Italic</i></p></span
                >
              </div></foreignObject
            >
          </g>
        </g>
        <g class="node default  " id="flowchart-B-1" transform="translate(75.3515625, 163)">
          <rect
            class="basic label-container"
            style=""
            x="-67.3515625"
            y="-27"
            width="134.703125"
            height="54"
          ></rect>
          <g class="label" style="" transform="translate(-37.3515625, -12)">
            <rect></rect>
            <foreignObject width="74.703125" height="24"
              ><div
                xmlns="http://www.w3.org/1999/xhtml"
                style="display: table-cell; white-space: nowrap; line-height: 1.5; max-width: 200px; text-align: center;"
              >
                <span class="nodeLabel "
                  ><p><span>Styled</span> text</p></span
                >
              </div></foreignObject
            >
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
